# gamepad

./: Gamepad.hs  app.hs  demo.hs  gamepad.cabal  readme.txt  shell.nix
exe/: gamepad.hs
src/Gamepad/: Demo.hs  Main.hs
src/Gamepad/App/: Run.hs  Type.hs
src/Gamepad/Demo/: BlankWindow.hs  Triangle.hs
