cabal-version: 2.0
build-type: Simple
name: gamepad
version: 0

library
    default-language: Haskell2010
    default-extensions: BlockArguments, LambdaCase, DuplicateRecordFields, NamedFieldPuns, NoImplicitPrelude, OverloadedStrings
    hs-source-dirs: src
    exposed-modules: Gamepad.App.Type, Gamepad.App.Run, Gamepad.Demo, Gamepad.Demo.BlankWindow
    build-depends: base, async, containers, GLUT, unordered-containers, hashable, relude, StateVar, vector

executable gamepad-demo
    hs-source-dirs: .
    default-language: Haskell2010
    main-is: demo.hs
    build-depends: base, gamepad
