cabal-version: 3.0

name: gamepad
version: 0

build-type: Simple

common base
    default-language: Haskell2010
    default-extensions: BlockArguments LambdaCase DuplicateRecordFields NamedFieldPuns NoImplicitPrelude OverloadedStrings TypeApplications
    build-depends: base, async, containers, GLUT, unordered-containers, hashable, relude, StateVar, vector

library
    import: base
    hs-source-dirs: src
    exposed-modules: Gamepad.Main

executable gamepad
    import: base
    hs-source-dirs: exe
    main-is: gamepad.hs
    build-depends: base, gamepad
